# sim2sim

./: .gitignore  README.md  index.html  pyproject.toml
.github/scripts/: publish_assets.py
.github/workflows/: publish-benchmark-site.yml
configs/: eval.yaml  eval_lerobot.yaml  eval_local.yaml  eval_zealot_v6.yaml  eval_zealot_v7.yaml
configs/policy/: zealot_biped_v6.yaml  zealot_biped_v7.yaml
configs/robot/: lerobot_biped_v7.yaml  lerobot_legs.yaml
crates/sim2sim-rapier/: Cargo.toml  README.md  pyproject.toml
crates/sim2sim-rapier/src/: lib.rs
examples/cube_drop/: README.md  benchmark.py  benchmark_results.json  genesis_cube.py  genesis_nyx_native.py  genesis_rt_native.py  isaac_rt_native.py  make_site.py  mjlab_cube.py  mujoco_cube.py  nexus_cube.py  nexus_rt_bench.json  nexus_rt_bench.py  nexus_rt_native.py  nyx_light_sweep.json  nyx_res_sweep.json  pybullet_cube.py  resource_profile.json  rt_record.py  rt_render.py
examples/cube_drop/site/: index.html
examples/cube_drop/tools/: fill_nocapture_5090.py  nyx_light_sweep.py  nyx_res_sweep.py  remeasure_5090.py  resource_profile.py  run_batch2k.sh
examples/lerobot_legs/: batch_bench.py  boot_bench.py  genesis_nyx_render.py  genesis_render.py  genesis_rt_render.py  isaac_render.py  isaac_zealot.py  mujoco_render.py  nexus_render.py  record_grid.py  record_overlay.py  record_zealot.py  velocity_sweep.py
examples/lerobot_legs/policy/: MODEL_CARD.md
src/sim2sim/: __init__.py  config.py
tests/: test_lerobot_legs.py  test_registry.py  test_sim_smoke.py
tools/: bootstrap_backends.sh
(+14 files in other folders)
